fixed layout issues

--- a/src/components/Deliveries/deliveries.scss
+++ b/src/components/Deliveries/deliveries.scss
@@ -16,12 +16,18 @@
 .row {
   /*background-color: #eee;*/
   background-color: rgba(201, 190, 218, 0.15);
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 
 .alt-row {
   /*background-color: #eee;*/
   background-color: rgba(161, 135, 226, 0.13);
+  /*cursor: pointer;*/
+}
+
+.open-big {
+  padding-top: 11px;
+  padding-right: 17px;
   cursor: pointer;
 }
 
@@ -35,6 +41,35 @@
   background-color: #f7f5f9;
   border: #f7f5f9 solid 1px;
 }
+
+.clearfix {
+  overflow: auto;
+  zoom: 0;
+}
+
+.combo-l {
+  float: left;
+  width: 70%;
+  padding-left: 200px;
+}
+
+.combo-r {
+  float: right;
+  width: 30%;
+}
+
+.date-div {
+  float: left;
+  direction: ltr;
+  width: 85%;
+  text-align: right;
+}
+
+.date-div-label {
+  float: right;
+  width: 15%;
+}
+
 /*
 .filter-div {
   width: 190px;
